Adding: swagger specific
