# internal/handler/route.go
@@ -16,7 +16,7 @@ func InitRouter(dbpool *pgxpool.Pool) *gin.Engine {
 
 	track_repo := repository.NewPostgresTrackRepository(dbpool)
 	track_handler := NewTrackHandler(track_repo)
-	track_subrouter := router.Group("/track")
+	track_subrouter := router.Group("/tracks")
 	{
 		track_subrouter.POST("/", track_handler.CreateTrack)
 		track_subrouter.GET("/:id", track_handler.GetTrackByID)
@@ -27,11 +27,11 @@ func InitRouter(dbpool *pgxpool.Pool) *gin.Engine {
 
 	artist_repo := repository.NewPostgresArtistRepository(dbpool)
 	artist_handler := NewArtistHandler(artist_repo)
-	artist_subrouter := router.Group("/artist")
+	artist_subrouter := router.Group("/artists")
 	{
 		artist_subrouter.POST("/", artist_handler.CreateArtist)
-		artist_subrouter.GET("/info/:id", artist_handler.GetInfoArtistByID)
-		artist_subrouter.GET("/:id", artist_handler.GetArtistTracksByID)
+		artist_subrouter.GET("/:id", artist_handler.GetInfoArtistByID)
+		artist_subrouter.GET("/:id/tracks", artist_handler.GetArtistTracksByID)
 		artist_subrouter.PUT("/", artist_handler.UpdateArtist)
 		artist_subrouter.DELETE("/:id", artist_handler.DeleteArtist)
 		artist_subrouter.GET("/", artist_handler.GetArtistWithFilter)
