# internal/response/artist.go
@@ -1,0 +1,5 @@
+package response
+
+type DeleteArtistResponse struct {
+	Response string
+}
