# internal/response/track.go
@@ -1,0 +1,5 @@
+package response
+
+type DeleteTrackResponse struct {
+	Response string
+}
